--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "whiteteeth-laisa",
   "version": "1.0.0",
+  "type": "module",
   "description": "<h1 align=\"center\"> Case Whiteeth #1 by Laisa </h1>",
   "main": "app.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "awesome-notifications": "^3.1.3",
     "body-parser": "^1.20.3",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.7",
@@ -52,6 +54,7 @@
     "object-inspect": "^1.13.2",
     "on-finished": "^2.4.1",
     "parseurl": "^1.3.3",
+    "path": "^0.12.7",
     "path-to-regexp": "^0.1.10",
     "proxy-addr": "^2.0.7",
     "qs": "^6.13.0",
